src/z80asm/z80asm2/t/50-layout/expected/layout_align_01.txt
% z88dk-z80asm -v -dump-after-layout t/50-layout//input/layout_align_01.asm
Define constant: __CPU_ZILOG__ = 1
Define constant: __CPU_Z80__ = 1
Define constant: __FLOAT_GENMATH__ = 1
Assembling t/50-layout/input/layout_align_01.asm...
t/50-layout/input/layout_align_01.asm:2:7: error: ALIGN value must be a power of two
    align 7
          ^
t/50-layout/input/layout_align_01.asm:4:7: error: ALIGN value must be a power of two
    align 3
          ^
Assembly completed with 2 errors
